--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -1891,20 +1891,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "競いあう仲間に､応援してくれる下僕たちに…そして､我が友に教えられたこと｡私は､魔法をかけてもらったから…きっと､輝いてみせる｡さぁ…行きましょう! 私たちの…光の城へ!",
-                        "comments_my_1": "魔法は､誰もが使えるもの!",
-                        "comments_my_2": "魂の輝きよ!(きらきら～☆)",
-                        "comments_my_3": "旅立ちの時!(行きましょう!)",
-                        "comments_my_4": "我が友OO､真実の言葉を聞く力は衰えていないわね",
-                        "comments_my_max": "い…いつかOOﾌﾟﾛﾃﾞｭｰｻｰの…真実の声も聞かせて?",
-                        "comments_work_1": "魔法にかかるときは…今よ!",
-                        "comments_work_2": "光がなければ､闇は輝けない…!",
-                        "comments_work_3": "風の知らせ…(いい事の予感!)",
-                        "comments_work_4": "ｸｸｸ…我が友OOのかけた魔法は色あせていないわ!",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､輝く舞台へ上げてくれて､ありがとう",
-                        "comments_work_love_up": "あ…貴方がﾌﾟﾛﾃﾞｭｰｻｰだったことは…運命…それとも…?",
-                        "comments_live": "宴のときは…今!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰに､伝えたいことがたくさん…わ､私､ﾌﾟﾛﾃﾞｭｰｽしてくれて嬉しかったのは､真実だから…!"
+                        "comment": "경쟁하는 동료들에게, 응원해주는 하인들에게… 그리고, 나의 벗에게 배운것. 나는, 마법에 걸렸으니까… 분명, 반짝여 보일거야. 자아… 가자! 우리들의… 빛의 성으로!",
+                        "comments_my_1": "마법은, 누구나가 쓸 수 있는 것!",
+                        "comments_my_2": "영혼의 반짝임이여! (반짝반짝～☆)",
+                        "comments_my_3": "떠남의 시간! (가죠!)",
+                        "comments_my_4": "나의 벗OO, 진정한 말을 듣는 힘이 쇠퇴하지 않았군",
+                        "comments_my_max": "언…언젠가 OO프로듀서의… 마음 속 목소리도 들려줘?",
+                        "comments_work_1": "마법에 걸릴 때는… 지금!",
+                        "comments_work_2": "빛이 없으면, 어둠은 반짝일 수 없다…!",
+                        "comments_work_3": "바람의 알림…(좋은 일의 예감!)",
+                        "comments_work_4": "크크크… 나의 벗 OO가 걸어준 마법은 퇴색하지 않았다!",
+                        "comments_work_max": "OO프로듀서, 빛나는 무대에 설 수 있게 해줘서, 고마워요",
+                        "comments_work_love_up": "다…당신이 프로듀서였던 것은…운명…아니면…?",
+                        "comments_live": "연회의 때는…지금!",
+                        "comments_love_max": "OO프로듀서한테, 전하고 싶은게 잔뜩… 나, 나, 프로듀스 해줘서 기뻤던 건, 진심이니까…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2413101/idolcomment.mp3",
@@ -1970,20 +1970,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "輝く舞台へ上がるための靴は､誰にも用意されている…｡けど､硝子の靴は目に見えないもの｡魔法を信じなければ､舞台には上がれない…｡でも私は信じるの｡それが我が友との盟約だから…!",
-                        "comments_my_1": "魔法は､誰もが使えるもの!",
-                        "comments_my_2": "魂の輝きよ!(きらきら～☆)",
-                        "comments_my_3": "いでよ､光の道!(ぴかぴか～!)",
-                        "comments_my_4": "我が友OOにも､魔法の力は見えているはず…信じて",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､わ…私と舞踏会へ…行ってほしいな",
-                        "comments_work_1": "魔法にかかるときは…今よ!",
-                        "comments_work_2": "光がなければ､闇は輝けない…!",
-                        "comments_work_3": "いでよ､光の海!(きらきら～!)",
-                        "comments_work_4": "砂時計の砂は落ち…舞踏会は幕開けの時間よ!(LIVEいこｰ!)",
-                        "comments_work_max": "OOﾌﾟﾛﾃﾞｭｰｻｰが私の主だったことが､魔法の始まりね",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ…貴方がﾌﾟﾛﾃﾞｭｰｻｰだったから､私は…",
-                        "comments_live": "魔法を信じて!",
-                        "comments_love_max": "輝く舞台はOOﾌﾟﾛﾃﾞｭｰｻｰと見るから､輝いて見えるんだと思う｡だからこれからも､あの輝きを一緒に見てほしいです"
+                        "comment": "빛나는 무대에 오르기 위한 신발은, 누구에게나 준비되어 있다… 하지만, 유리구두는 눈에 보이지 않는 것. 마법을 믿지 않으면, 무대에는 오를 수 없다… 하지만 나는 믿어.  그것이 나의 벗과의 맹약이니까…!",
+                        "comments_my_1": "마법은, 누구나가 쓸 수 있는 것!",
+                        "comments_my_2": "영혼의 반짝임이여! (반짝반짝～☆)",
+                        "comments_my_3": "나와라, 빛의 길! (번쩍번쩍～!)",
+                        "comments_my_4": "나의 벗 OO에게도, 마법의 힘은 보일터… 믿어 줘",
+                        "comments_my_max": "OO프로듀서, 나… 나하고 무도회에… 가면 좋겠는데",
+                        "comments_work_1": "마법에 걸릴 때는… 지금!",
+                        "comments_work_2": "빛이 없으면, 어둠은 반짝일 수 없다…!",
+                        "comments_work_3": "나와라, 빛의 바다! (반짝반짝～!)",
+                        "comments_work_4": "모래시계의 모래는 떨어지고… 무도회는 막을 올릴 시간이야! (LIVE 가자-!)",
+                        "comments_work_max": "OO프로듀서가 나를 담당했던 것이, 마법의 시작이었네",
+                        "comments_work_love_up": "OO프로듀서… 당신이 프로듀서였으니까, 나는…",
+                        "comments_live": "마법을 믿어줘!",
+                        "comments_love_max": "빛나는 무대는 OO프로듀서와 보니까, 빛나 보인다고 생각해. 그러니까 앞으로도, 저 반짝임을 같이 봤으면 좋겠어요"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2513102/idolcomment.mp3",
@@ -2049,20 +2049,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "みなの前で､鎧である服を脱ぎ､失われた翼を晒すことになるとは……だが､私はいま､その代償に満足している…ﾌｯﾌｯﾌ｡…って､あのっ､か､かな子ちゃん､くすぐったいです～!",
-                        "comments_my_1": "血より鮮やかに!(赤くてｷﾚｲ!)",
-                        "comments_my_2": "熱に浮かされよ!(あっつ～い)",
-                        "comments_my_3": "風よ､吹け!(ぱたぱた～)",
-                        "comments_my_4": "あ､あのぅ…かな子ちゃん､私…えぇと､なんでもない…",
-                        "comments_my_max": "ﾌﾟﾛﾃﾞｭｰｻｰは､元気にしてるかなぁ……｡い､いまは､いっか",
-                        "comments_work_1": "真紅に燃えろ!(情熱的だな～)",
-                        "comments_work_2": "我の第4形態!(新しい衣装～!)",
-                        "comments_work_3": "時は…まだ!(待って待って～)",
-                        "comments_work_4": "お､お仕事の前に､もう一回､お風呂に入り直そうかなぁ～!",
-                        "comments_work_max": "美肌の湯…これに入ったら､ﾌﾟﾛﾃﾞｭｰｻｰも喜ぶかな～?",
-                        "comments_work_love_up": "かっ､かな子ちゃん､裸のつきあいは…はっ､恥ずかしいよ～",
-                        "comments_live": "ま､待って!",
-                        "comments_love_max": "はぁ…｡温泉って､みんなと来てもいいところだったんだね～｡知らなかった～｡とってもﾄﾞｷﾄﾞｷしたけど､また来たいなぁ～♪"
+                        "comment": "모두의 앞에서, 갑옷을 벗고, 잃어버린 날개를 드러내게 되다니…… 허나, 나는 지금, 그 대가에 만족하고 있다… 훗훗훗.… 라니, 저기, 카, 카나코쨩, 간지러워요～!",
+                        "comments_my_1": "피보다 선명하게! (빨개서 귀여워!)",
+                        "comments_my_2": "열에 띄워져라! (더～워어)",
+                        "comments_my_3": "바람이여, 불어라! (파닥파닥～)",
+                        "comments_my_4": "저, 저기…카나코쨩, 나… 그러니까, 아무것도 아니야…",
+                        "comments_my_max": "프로듀서는, 건강하게 있으려나…… 지, 지금은, 됐나",
+                        "comments_work_1": "진홍색으로 타올라라! (정열적이구나～)",
+                        "comments_work_2": "나의 제4형태! (새로운 의상～!)",
+                        "comments_work_3": "시간은…아직! (기다려 기다려～)",
+                        "comments_work_4": "이, 일하기 전에, 한번 더, 목욕하러 갔다올까～!",
+                        "comments_work_max": "미용의 물… 이거에 들어가면, 프로듀서도 좋아해줄까～?",
+                        "comments_work_love_up": "캇, 카나코쨩, 알몸으로 어울리는건… 부, 부끄러워～",
+                        "comments_live": "기, 기다려라!",
+                        "comments_love_max": "하아… 온천이란, 모두랑 와도 좋은 곳이었네~. 몰랐어 ~. 굉장히 두근거렸지만, 또 오고 싶다～♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2418801/idolcomment.mp3",
@@ -2128,20 +2128,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ｸｯｸｯｸ……みなのもの､よくぞ来た｡今宵はここで私の新たなる宴を開催しようぞ! いざ､紅蓮の夜の幕開けよｰ! ｱｰｯﾊｯﾊ!(訳：みんなｰ! 今日のﾊﾟｰﾃｨｰ､盛り上がっていこうねｰ!)",
-                        "comments_my_1": "血より鮮やかに!(赤くてｷﾚｲ!)",
-                        "comments_my_2": "熱に浮かされよ!(あっつ～い)",
-                        "comments_my_3": "禁断の衣よ!(和風のﾄﾞﾚｽ～♪)",
-                        "comments_my_4": "ともに求めよ! 我ら闇の住人たちの夜を!(夜更かししよ～?)",
-                        "comments_my_max": "OO､我が友にして我が下僕…真の姿は我だけが知る!",
-                        "comments_work_1": "真紅に燃えろ!(情熱的だな～)",
-                        "comments_work_2": "我の第4形態!(新しい衣装～!)",
-                        "comments_work_3": "肌が火照るわ!(温泉効果～♪)",
-                        "comments_work_4": "真紅のﾘﾎﾞﾝが繋ぐは､人と人の魂!(貴方との､絆でｰす♪)",
-                        "comments_work_max": "貴方もその隠されし翼を広げて!(一緒に着替えようよ～!)",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰ…あ､ありがとう｡素敵な夜をくれて…",
-                        "comments_live": "紅蓮の闇を聞け!",
-                        "comments_love_max": "我が友よ｡ううん……OOﾌﾟﾛﾃﾞｭｰｻｰ｡私に､いろんな経験をさせてくれて､新しい衣装をくれて…あ､ありがとう…!"
+                        "comment": "큭큭큭…… 모두들, 잘도 왔군. 오늘 저녁은 여기서 나의 새로운 연회를 개최하자! 자, 홍련의 밤을 열어라-! 아-앗핫핫! (역 : 모두들-! 오늘의 파티, 불태워서 가자-!)",
+                        "comments_my_1": "피보다 선명하게! (빨개서 귀여워!)",
+                        "comments_my_2": "열에 띄워져라! (더～워어)",
+                        "comments_my_3": "금단의 드레스! (일본풍 드레스～♪)",
+                        "comments_my_4": "함께 원하라! 우리들 어둠의 주인들의 밤을! (밤샘하자～?)",
+                        "comments_my_max": "OO, 나의 벗이며 나의 하인… 진정한 모습은 나만이 알고 있다!",
+                        "comments_work_1": "진홍색으로 타올라라! (정열적이구나～)",
+                        "comments_work_2": "나의 제4형태! (새로운 의상～!)",
+                        "comments_work_3": "피부가 달아올랐다! (온천효과～♪)",
+                        "comments_work_4": "진홍의 리본이 잇는 것은 사람과 사람의 영혼! (당신과의, 인연-이에요♪)",
+                        "comments_work_max": "당신도 그 숨겨진 날개를 펼쳐라! (같이 맞춰 입자～!)",
+                        "comments_work_love_up": "OO프로듀서… 고, 고마워. 멋있는 밤을 줘서…",
+                        "comments_live": "홍련의 어둠을 들어라!",
+                        "comments_love_max": "나의 벗이여. 아니…… OO프로듀서. 나에게, 많은 경험을 시켜 주고, 새로운 의상도 줘서… 고, 고마워…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2518802/idolcomment.mp3",
@@ -2207,20 +2207,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "我こそは､白亜のｲﾊﾞﾗに包まれた城に舞い降りし､天よりの使い｡ﾛｰｾﾞﾝﾌﾞﾙｸｴﾝｹﾞﾙの字名を得て､我はさらなる高みへと飛躍するわ! 高潔なる《瞳》を持つ者よ､我が翼を呼ぶがよい!",
-                        "comments_my_1": "我が闇の力､今こそ解放せんっ!",
-                        "comments_my_2": "らんらんっ! とはっ!?",
-                        "comments_my_3": "ｸﾞﾘﾓﾜｰﾙに刻まれし､術式よ…",
-                        "comments_my_4": "真紅の秘薬…太陽の力を蓄え､赤く実りし恵みを用いるわ",
-                        "comments_my_max": "ﾌﾟﾛﾃﾞｭｰｻｰ､私の言の葉は…魂で感じてほしい…です",
-                        "comments_work_1": "闇に飲まれよ!",
-                        "comments_work_2": "我が魂の赴くままに!",
-                        "comments_work_3": "ﾌﾟﾛ……ﾌﾟﾛ……ﾌﾟﾘﾝ……",
-                        "comments_work_4": "我にこれほどの重圧を与えるとは…これが《瞳》持つ者の力か",
-                        "comments_work_max": "私が高みへ飛ぶために手にした剣…それは､貴方の力だから",
-                        "comments_work_love_up": "我が下僕､いや…我が友よ! 今こそ､魂を共鳴させるとき!",
-                        "comments_live": "聞くがよい…LEGNE!",
-                        "comments_love_max": "我が友…いいえ､ﾌﾟﾛﾃﾞｭｰｻｰ｡ありがとう｡私の心の声を聞き取ってくれて…｡私は､きっと､もっと高く飛んでみせます…絶対!"
+                        "comment": "나야말로, 백악의 가시나무에 둘러싸인 성에 내려앉은, 하늘의 사자. 로젠 부르크 엥겔의 이름을 얻어, 나는 한층 더 높은 곳으로 도약한다! 고결한 《눈동자》를 가진 자여, 나의 날개를 외쳐라!",
+                        "comments_my_1": "나의 어둠의 힘, 지금이야말로 해방하리라!",
+                        "comments_my_2": "란란! 이란건!?",
+                        "comments_my_3": "그리모와르에 새겨진, 술식이여…",
+                        "comments_my_4": "진홍의비약…태양의 힘을 비축해, 붉게 여물고 은혜를 베풀지",
+                        "comments_my_max": "프로듀서, 나의 말은… 영혼으로 느껴 줬으면… 해요",
+                        "comments_work_1": "어둠에 삼켜져라!",
+                        "comments_work_2": "나의 영혼이 따르는대로!",
+                        "comments_work_3": "프로……프로……푸딩……",
+                        "comments_work_4": "나에게 이 정도의 중압을 주다니… 이것이 《눈동자》를 가진자의 힘인가",
+                        "comments_work_max": "내가 높은 곳으로 날기 위해 손에 든 검… 그것은, 당신의 힘이니까",
+                        "comments_work_love_up": "나의 하인, 아니… 나의 벗이여! 지금이야말로, 영혼을 공명시킬 때!",
+                        "comments_live": "듣는게 좋다…LEGNE!",
+                        "comments_love_max": "나의 벗… 아니, 프로듀서. 고마워요.  내 마음속 소리를 들어줘서… 저는, 꼭, 더 높이 날아 보일거에요… 절대로!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2522502/idolcomment.mp3",
@@ -2291,20 +2291,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "『ｸｯｸｯｸ…感謝しよう｡枷から解き放たれ､黒衣を纏って私は再臨した｡かつての無垢なる姫はもういない! 魔王の花嫁たる私に､心まで捧げるがいい!』ﾌﾌ…興が乗ってきたわ! これぞ､私!",
-                        "comments_my_1": "婚礼の儀､か(結婚式､いいな～)",
-                        "comments_my_2": "撮影まだかな～…き､聴いた?",
-                        "comments_my_3": "私がﾀﾞｰｸﾌﾞﾗｲﾄﾞよ!(決まった!)",
-                        "comments_my_4": "闇のｳﾞｪｰﾙに触れられるのは､世界でただ一人｡そう､貴方だけ…",
-                        "comments_my_max": "その…OOﾌﾟﾛﾃﾞｭｰｻｰ! この道では､隣に並んで…?",
-                        "comments_work_1": "『心まで束縛されはしないっ』",
-                        "comments_work_2": "我を導け…!(教えてください!)",
-                        "comments_work_3": "ﾌﾌ…魔界を統べるのも悪くない",
-                        "comments_work_4": "堕天使から転生し､魔界の花嫁とは…!(ｼﾞｮﾌﾞﾁｪﾝｼﾞ楽しい～)",
-                        "comments_work_max": "魔王にふさわしき力､見せてもらおう｡世界の半分､私にくれる?",
-                        "comments_work_love_up": "過去に囚われたりはしない…私は誰の所有物にもならないわ!",
-                        "comments_live": "契りを結ぼう…永久に!",
-                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､感謝しているわ｡私一人では紡げなかった物語､貴方となら紡いでいける! だから……ありがとう!"
+                        "comment": "『큭큭큭…감사하라. 굴레에서 해방되어, 흑의를 걸친 나는 재림했다. 과거의 순수한 공주는 이제 없다! 마왕의 신부인 나에게, 마음까치 바치는 것이 좋다!』후후… 흥이 나는군! 이거야, 나!",
+                        "comments_my_1": "혼례식인, 가(결혼식, 좋겠다～)",
+                        "comments_my_2": "촬영 아직일까나～…들, 들었어?",
+                        "comments_my_3": "내가 다크 브라이드야! (정했다!)",
+                        "comments_my_4": "어둠의 베일에 닿을 수 있는것은, 세계에서 오직 한사람. 그래, 당신뿐…",
+                        "comments_my_max": "저기…OO프로듀서! 이 길에서는, 옆에 나란히 서 줘…?",
+                        "comments_work_1": "『마음까지 속박되지는 않겠어』",
+                        "comments_work_2": "나를 인도하라…! (가르쳐 주세요!)",
+                        "comments_work_3": "후후…마계를 지배하는 것도 나쁘지 않아",
+                        "comments_work_4": "타천사에서 환생해서, 마계의 신부라니…! (직업 변경 신난다～)",
+                        "comments_work_max": "마왕에 어울리는 힘, 보여주자. 세계의 절반, 나에게 줄래?",
+                        "comments_work_love_up": "과거에 얽매이거나 하지 않아… 나는 누구의 소유물도 되지 않는다!",
+                        "comments_live": "약속을 맺자… 영원히!",
+                        "comments_love_max": "OO프로듀서, 감사하게 생각하고 있어요.  나 혼자였다면 만들 수 없었던 이야기, 당신과 함께라면 만들 수 있어! 그러니……고마워!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2424401/idolcomment.mp3",
