--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -4190,7 +4190,7 @@ kg
                     }
                 }, {
                     "story_id": "162",
-                    "story_title": "貴方と紡ぐ!剣と魔法のファンタジー",
+                    "story_title": "당신과 잣다! 검과 마법의 판타지",
                     "voice_enable": {
                         "0": "1",
                         "3": "1"
