--- a/idol_gallery/idol_detail/ranko_k.html
+++ b/idol_gallery/idol_detail/ranko_k.html
@@ -3170,20 +3170,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "ふぅ､危なかった…｡暑すぎて溶けちゃいそうだったけど…ここは､ちょっと涼しい…♪あの､OOﾌﾟﾛﾃﾞｭｰｻｰも隣にどうぞ…｡ｵﾎﾝ｡煩わしい太陽へ､共にささやかなる抵抗を…!",
-                        "comments_my_1": "妖精たちの戯れも…悪くないわ",
-                        "comments_my_2": "(いつもの私は…少しお休み♪)",
-                        "comments_my_3": "ぱしゃぱしゃ…気持ちいい♪",
-                        "comments_my_4": "今は翼をたたむ時…だから､気の抜けた私は､みんなには内緒で",
-                        "comments_my_max": "静かな世界で…ﾌﾟﾛﾃﾞｭｰｻｰとのんびりするの､楽しいな…!",
-                        "comments_work_1": "今は光も我が僕よ! (ｷﾗｷﾗ～!)",
-                        "comments_work_2": "風は我へと吹いている…!",
-                        "comments_work_3": "刹那の憩いを…(ﾘﾗｯｸｽﾀｲﾑ～)",
-                        "comments_work_4": "奈落の主が手招きしている! (落ちないように気を付けなきゃ)",
-                        "comments_work_max": "我が友にも清流を! …えっと､ﾌﾟﾛﾃﾞｭｰｻｰ､もっとこっちに…",
-                        "comments_work_love_up": "ひとときの甘美なる夢よ…(この時間､もっと続けばいいな…)",
-                        "comments_live": "水辺での宴も､また一興…",
-                        "comments_love_max": "休息は束の間…されど､私の魔力は潤った! (いきましょう､OOﾌﾟﾛﾃﾞｭｰｻｰ! この後の撮影も､頑張っちゃいますっ!)"
+                        "comment": "후우, 위험했다… 너무 더워서 녹아버릴 뻔했는데… 여기는, 조금 시원해…♪ 저기, OO프로듀서도 이리로 오세요… 엇흠. 성가신 태양에, 함께 작은 저항을…!",
+                        "comments_my_1": "요정들의 장난도… 나쁘지 않군",
+                        "comments_my_2": "(평소의 나는… 잠깐 휴식♪)",
+                        "comments_my_3": "첨벙첨벙… 기분 좋아아♪",
+                        "comments_my_4": "지금은 날개를 접을 때… 그러니, 풀어져 있는 나는, 모두에게는 비밀로",
+                        "comments_my_max": "조용한 세계에서… 프로듀서와 느긋하게 있는 것, 신난다…!",
+                        "comments_work_1": "지금은 빛도 나의 하인이야! (반짝반짝～!)",
+                        "comments_work_2": "바람은 나에게로 불고 있다…!",
+                        "comments_work_3": "찰나의 휴식을… (릴렉스타임～)",
+                        "comments_work_4": "나락의 주인이 손짓하고 있다! (떨어지지 않도록 조심해야지)",
+                        "comments_work_max": "나의 벗에게도 청류를! … 저기, 프로듀서, 좀 더 이쪽으로… ",
+                        "comments_work_love_up": "한때의 감미로운 꿈이여… (이 시간, 더 이어졌으면 좋겠다…)",
+                        "comments_live": "물가에서의 연회도, 또한 여흥…",
+                        "comments_love_max": "휴식은 순간… 하지만, 나의 마력은 윤택해졌다! ( 가죠, OO프로듀서! 이 다음의 촬영도, 열심히 할게요!)"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2449601/idolcomment.mp3",
@@ -3249,20 +3249,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "汝の瞳に焼きつけよ! 鮮やかな衣を身に纏い､悪戯な姫が紡ぐ微笑を! 刻は満ち…今､新たなるﾌﾞﾘｭﾝﾋﾙﾃﾞが､覚醒する! (新しい私､ﾊﾞｯﾁﾘ見せます…! 油断してると､ｲﾀｽﾞﾗしちゃうぞっ♪) ",
-                        "comments_my_1": "妖精たちの戯れも…悪くないわ",
-                        "comments_my_2": "(いつもの私は…少しお休み♪)",
-                        "comments_my_3": "枷は外れた! (ﾊｼﾞｹちゃおっ♪)",
-                        "comments_my_4": "出でよ､忠実なる使い魔! (ぬいぐるみﾎﾟｰﾁ､可愛いなぁ～♪)",
-                        "comments_my_max": "今こそ､我が友との盟約を形に! (ﾌﾟﾛﾃﾞｭｰｻｰに､ｳｨﾝｸっ♪)",
-                        "comments_work_1": "今は光も我が僕よ! (ｷﾗｷﾗ～!)",
-                        "comments_work_2": "風は我へと吹いている…!",
-                        "comments_work_3": "ｸｸ…私の登場に､星も堕ちたか!",
-                        "comments_work_4": "魔性の装いが､嵐を呼び起こす! (ふふ､みんな驚いてる…♪)",
-                        "comments_work_max": "次なる時は汝の翼も此処に! (後でﾌﾟﾛﾃﾞｭｰｻｰと､記念撮影っ)",
-                        "comments_work_love_up": "堂々たる歩みを! …ﾌﾟﾛﾃﾞｭｰｻｰが似合うって言ってくれたから!",
-                        "comments_live": "妖しき瞳! (視線でｱﾋﾟｰﾙ!)",
-                        "comments_love_max": "我が友の瞳が､次なる神話の創造を果たした! …いつもｽﾃｷな私を見つけてくれて､ありがとう…OOﾌﾟﾛﾃﾞｭｰｻｰ♪"
+                        "comment": "그대의 눈동자에 새겨라! 산뜻한 옷을 입고, 장난스러운 공주가 자아내는 미소를! 시간은 차고… 지금, 새로운 브륜힐데가, 각성한다! (새로운 나, 확실히 보여줄게요…! 방심하고 있으면, 장난쳐버릴거야♪)",
+                        "comments_my_1": "요정들의 장난도… 나쁘지 않군",
+                        "comments_my_2": "(평소의 나는… 잠깐 휴식♪)",
+                        "comments_my_3": "굴레는 벗겨졌다! (튕겨나 버렸다♪)",
+                        "comments_my_4": "나와라, 충성스러운 사역마! (인형 가방, 귀엽네～♪)",
+                        "comments_my_max": "지금이야말로, 나의 벗과의 맹약을 형태로! (프로듀서에게, 윙크♪)",
+                        "comments_work_1": "지금은 빛도 나의 하인이야! (반짝반짝～!)",
+                        "comments_work_2": "바람은 나에게로 불고 있다…!",
+                        "comments_work_3": "크크… 나의 등장에, 별도 떨어지는가!",
+                        "comments_work_4": "마성의 치장이, 폭풍을 불러 일으킨다! (후후, 모두 놀라고 있어…♪)",
+                        "comments_work_max": "다음에는 그대의 날개도 이곳에! (나중에 프로듀서랑, 기념촬영)",
+                        "comments_work_love_up": "당당한 발걸음을! … 프로듀서가 어울린다고 말해줬으니까!",
+                        "comments_live": "요염한 눈동자! (시선으로 어-필!)",
+                        "comments_love_max": "나의 벗의 눈동자가, 다음 신화의 창조를 이루었다! … 언제나 근사한 나를 발견해줘서, 고마워… OO 프로듀서♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2549602/idolcomment.mp3",
@@ -3334,20 +3334,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "…次なる饗宴は､我が魂が同胞達と共鳴する幻想歌劇｡大いなる盟約の元､薔薇の黒衣を纏い､甘美なる祭壇へと降り立つの! (次のLIVEは､こだわりの衣装で歌いたいな～｡お願いします♪)",
-                        "comments_my_1": "薔薇の香りを纏って…(ｳｯﾄﾘ♪)",
-                        "comments_my_2": "魔力の高まりを感じるわ…!",
-                        "comments_my_3": "あ､ま､まだ見ちゃﾀﾞﾒ～っ!",
-                        "comments_my_4": "ｼﾙﾌの戯れも､今は未だ…(寒くないです､夢中だったから♪)",
-                        "comments_my_max": "ここは聖なる泉｡何故なら…(貴方が来てくれたから…なんて)",
-                        "comments_work_1": "薔薇が我が身を…! (ｽﾃｷ～っ)",
-                        "comments_work_2": "指先に触れるｼｳﾞｧの息吹よ!",
-                        "comments_work_3": "ｸﾞﾘﾓﾜｰﾙが教えるのは､真の姿♪",
-                        "comments_work_4": "魂が呪具を導いたわ(ずっと欲しかった羽根ﾍﾟﾝなんです♪)",
-                        "comments_work_max": "真の願いは…もう届いているでしょう? (叶えてほしいな♪)",
-                        "comments_work_love_up": "秘められし紋様…我が友OOになら見せてもいいかも",
-                        "comments_live": "禁断に触れては…だめ",
-                        "comments_love_max": "…できた! 時は満ち､術式は完成したわ｡大いなる福音を我が手に! (OOﾌﾟﾛﾃﾞｭｰｻｰ､素敵な衣装…お願い～♪)"
+                        "comment": "…다음 향연은, 나의 영혼이 동포들과 공명하는 환상가극. 커다란 맹약의 아래, 장미의 흑의를 입고, 감미로운 제단에 내려서는 것! (다음 LIVE는, 제가 원하는 의상으로 노래하고 싶어요～. 부탁합니다♪)",
+                        "comments_my_1": "장미의 향기를 걸치고… (좋은향♪)",
+                        "comments_my_2": "마력의 고조가 느껴져…!",
+                        "comments_my_3": "아, 아, 아직 보면 안돼～앳!",
+                        "comments_my_4": "실프의 장난도, 지금은 아직… (춥진 않아요, 열중하고 있었으니까♪)",
+                        "comments_my_max": "여기는 성스러운 샘. 왜냐하면… (당신이 와주었으니까…라니)",
+                        "comments_work_1": "장미가 나의 몸을…! (멋있～어)",
+                        "comments_work_2": "손끝에 닿는 시바의 숨결이여!",
+                        "comments_work_3": "그리모와르가 알려주는 것은, 진정한 모습♪",
+                        "comments_work_4": "영혼이 주구를 이끌었다 (계속 갖고 싶었던 날개펜이에요♪)",
+                        "comments_work_max": "진정한 소원은… 이미 전해졌죠? (이뤄졌으면 좋겠다♪)",
+                        "comments_work_love_up": "숨겨진 문양… 나의 벗 OO라면 보여줘도 좋을지도",
+                        "comments_live": "금단을 건드려선… 안 돼",
+                        "comments_love_max": "… 됐다! 시간은 차고, 술식은 완성됐다. 커다란 복음을 나의 손에! ( OO 프로듀서, 멋진 의상…부탁해～♪)"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2453401/idolcomment.mp3",
@@ -3413,20 +3413,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "闇に誘われし､薔薇の花片たちよ…集え! 汝らを導くは､ｼｭﾊﾞﾙﾂﾛｰｾﾞ｡双翼に魔力を湛え､約束の言霊を紡ぐ者よ｡悠久を従え､美しく咲き誇り､召喚の儀を執り行おう｡さぁ…いざ､讃えよ!",
-                        "comments_my_1": "薔薇の香りを纏って…(ｳｯﾄﾘ♪)",
-                        "comments_my_2": "魔力の高まりを感じるわ…!",
-                        "comments_my_3": "眼をしかと開けよ! (見て～♪)",
-                        "comments_my_4": "この魂を封じるものは何もない! (ｽﾃｰｼﾞ､駆け抜けちゃいます)",
-                        "comments_my_max": "永遠はこの手で掴むわ! 親愛なる我が友と同胞が導く先に…!",
-                        "comments_work_1": "薔薇が我が身を…! (ｽﾃｷ～っ)",
-                        "comments_work_2": "指先に触れるｼｳﾞｧの息吹よ!",
-                        "comments_work_3": "召喚術が完成したわ(開演～!)",
-                        "comments_work_4": "麗しの薔薇の鎧! (ｽﾃｷな衣装､みんなも気に入ってくれた～)",
-                        "comments_work_max": "言霊よ｡禁断の詩編を紡ぎ､魔力となり…我が友へ届け!",
-                        "comments_work_love_up": "友よ! 諸人よ! 天より降り立つ黒翼を見よ! それは我なり!",
-                        "comments_live": "我が魂と､薔薇の契約を…!",
-                        "comments_love_max": "薔薇の魔力に魅入られたのなら最後…茨は絡みついて､離さないわ｡我が友OOも､薔薇が咲く楽園へ､共に…!"
+                        "comment": "어둠에 이끌린 장미의 화편들이여… 모여라! 그대들을 이끄는 것은, 슈바르츠 로제. 쌍익에 마력을 담아 약속의 언령을 자아내는 자여. 유구를 복종시키고, 아름답게 피어나, 소환의 의식을 거행하자. 자아… 이제, 찬양하라!",
+                        "comments_my_1": "장미의 향기를 걸치고… (좋은향♪)",
+                        "comments_my_2": "마력의 고조가 느껴져…!",
+                        "comments_my_3": "눈을 확실히 열라! (봐줘～♪)",
+                        "comments_my_4": "이 영혼을 봉할 것은 아무것도 없다! (스테이지, 달려나갑니다)",
+                        "comments_my_max": "영원은 이 손으로 잡겠다! 친애하는 나의 벗과 동포가 이끌기 전에…!",
+                        "comments_work_1": "장미가 나의 몸을…! (멋있～어)",
+                        "comments_work_2": "손끝에 닿는 시바의 숨결이여!",
+                        "comments_work_3": "소환술이 완성됐다 (개연～!)",
+                        "comments_work_4": "아름다운 장미의 갑옷! (멋진 의상, 모두도 마음에 들어 해줬어～)",
+                        "comments_work_max": "언령이여. 금단의 시편을 엮어, 마력이 되어… 나의 벗에게 닿아라!",
+                        "comments_work_love_up": "벗이여! 모두여! 하늘에서 내려서는 흑익을 보라! 그것이 나일지니!",
+                        "comments_live": "나의 영혼과, 장미의 계약을…!",
+                        "comments_love_max": "장미의 마력에 매료되었다면 끝… 가시나무는 휘감겨, 풀리지 않는다. 나의 벗 OO도, 장미가 피는 낙원으로, 함께…!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2553402/idolcomment.mp3",
@@ -3492,20 +3492,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "神の涙は､無情にも大地を打つ｡この宣託は裁きか恩恵か…｡けれど､抗う術なく袖を濡らす私ではないわ｡楯は､我が手に! …風邪ひくといけないから､OOﾌﾟﾛﾃﾞｭｰｻｰも､どうぞ?",
-                        "comments_my_1": "天に翻弄されし､我らの運命…",
-                        "comments_my_2": "聴こえるわ｡涙に満ちた歌が…",
-                        "comments_my_3": "不思議と肌寒くはないの…",
-                        "comments_my_4": "今こそ､呪文を唱える時! (話したいこと､いっぱいあるんです)",
-                        "comments_my_max": "OOﾌﾟﾛﾃﾞｭｰｻｰの大切なｽｰﾂが､濡れないように…!",
-                        "comments_work_1": "涙も､いつかは止むもの…",
-                        "comments_work_2": "静謐の場よ…(声が響く…!)",
-                        "comments_work_3": "天の光は未だ…(雨止まないね)",
-                        "comments_work_4": "雨に導かれし盟約者達の綺譚! (ﾜｸﾜｸする話､思いつきました!)",
-                        "comments_work_max": "汝の黒衣も､いずれは…(次はﾌﾟﾛﾃﾞｭｰｻｰのお買い物を…ね?)",
-                        "comments_work_love_up": "OOﾌﾟﾛﾃﾞｭｰｻｰとのお買い物､楽しかったな…♪",
-                        "comments_live": "煩わしい太陽も､休息の時!",
-                        "comments_love_max": "気紛れな運命の糸すら､手繰り寄せるわ! …えっと…もう少し､OOﾌﾟﾛﾃﾞｭｰｻｰと歩いていたいなって｡えへ…♪"
+                        "comment": "신의 눈물은, 무정하게도 대지를 두드린다.  이 신탁은 심판인가 은혜인가…  하지만, 저항도 못하고 옷깃을 적실 내가 아니야. 방패는 나의 손에! …감기 걸리면 안 되니까, OO 프로듀서도, 들어와?",
+                        "comments_my_1": "하늘에 농락당하는, 우리의 운명…",
+                        "comments_my_2": "들린다. 눈물에 가득찬 노래가…",
+                        "comments_my_3": "이상하게도 쌀쌀하진 않아…",
+                        "comments_my_4": "지금이야말로, 주문을 외울 때! (말하고 싶은 것, 잔뜩 있어요)",
+                        "comments_my_max": "OO프로듀서의 소중한 정장이, 젖지 않도록…!",
+                        "comments_work_1": "눈물도, 언젠가는 멈추기 마련…",
+                        "comments_work_2": "정밀한 장소여… (목소리가 울려…!)",
+                        "comments_work_3": "하늘의 빛은 아직이다… (비 안 그치네)",
+                        "comments_work_4": "비에 이끌린 맹약자들의 기담! (두근두근한 이야기, 생각났어요!)",
+                        "comments_work_max": "그대의 흑의도, 머지 않아…(다음은 프로듀서의 쇼핑을…알겠죠?)",
+                        "comments_work_love_up": "OO프로듀서하고의 쇼핑, 즐거웠어…♪",
+                        "comments_live": "성가신 태양도, 휴식의 시간!",
+                        "comments_love_max": "변덕스러운 운명의 실마저, 끌어당기네! …저기… 조금 더, OO프로듀서랑 같이 걷고 싶달까나. 에헤…♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2455901/idolcomment.mp3",
@@ -3571,20 +3571,20 @@ kg
                         "card_cv": "内田真礼"
                     },
                     "comments": {
-                        "comment": "歌声が溢れる…｡これは魔力ではなく､胸に秘めた想い｡天よ､地よ､聴いてほしい｡たとえ世界が瓦解しても､私は祈りの歌を紡いでみせるわ…(私の切ない歌…みんな､聴いて……!)",
-                        "comments_my_1": "天に翻弄されし､我らの運命…",
-                        "comments_my_2": "聴こえるわ｡涙に満ちた歌が…",
-                        "comments_my_3": "(崖…ちょっと高いかも…うぅ)",
-                        "comments_my_4": "これは､お別れの歌? …ううん､新たな始まりを祈り綴る歌!",
-                        "comments_my_max": "風よ､この声を運んで…｡我が友OOのもとまで…!",
-                        "comments_work_1": "涙も､いつかは止むもの…",
-                        "comments_work_2": "静謐の場よ…(声が響く…!)",
-                        "comments_work_3": "紡がれしは､偽りなき魂の声…!",
-                        "comments_work_4": "歌劇の中であっても､私は私…｡悲劇さえも糧にしてみせるわ",
-                        "comments_work_max": "いかなる歌も､我が力に変えるわ｡我が友がくれる魔力と共に!",
-                        "comments_work_love_up": "鳥に翼があるように､私にも歌がある…盟友から授かりし歌が!",
-                        "comments_live": "古城の栄華は､この胸に…",
-                        "comments_love_max": "祈りの姫は歌い続ける…それは私とて同じこと｡我が友OOに誓うわ｡私も､ｱｲﾄﾞﾙとしてずっと歌い続けるって!"
+                        "comment": "노랫소리가 넘쳐흐른다… 이것은 마력이 아닌, 가슴에 간직한 마음. 하늘이여, 땅이여, 들어주길 바란다.  설령 세계가 무너지더라도, 나는 기도의 노래를 자아내겠어… (나의 슬픈 노래… 모두, 들어줘……!)",
+                        "comments_my_1": "하늘에 농락당하는, 우리의 운명…",
+                        "comments_my_2": "들린다. 눈물에 가득찬 노래가…",
+                        "comments_my_3": "(절벽… 조금 높을지도… 우으)",
+                        "comments_my_4": "이것은, 이별의 노래? … 아니, 새로운 시작을 기원하는 노래!",
+                        "comments_my_max": "바람이여, 이 목소리를 전해줘… 나의 벗 OO이 있는 곳까지…!",
+                        "comments_work_1": "눈물도, 언젠가는 멈추기 마련…",
+                        "comments_work_2": "정밀한 장소여… (목소리가 울려…!)",
+                        "comments_work_3": "자아내는 것은 거짓없는 영혼의 목소리…!",
+                        "comments_work_4": "가극 속에서도, 나는 나… 비극까지도 양식으로 삼겠어",
+                        "comments_work_max": "어떤 노래도, 내 힘으로 바꾸겠어. 나의 벗이 준 마력과 함께!",
+                        "comments_work_love_up": "새에게 날개가 있듯이, 나에게도 노래가 있어… 맹우에게서 받은 노래가!",
+                        "comments_live": "고성의 영화는, 이 가슴에…",
+                        "comments_love_max": "기도의 공주는 노래를 이어간다… 그것은 나도 마찬가지. 나의 벗 OO에게 맹세한다. 나도, 아이돌로서 쭉 노래하겠다고!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2555902/idolcomment.mp3",
